--- a/index.html
+++ b/index.html
@@ -24,5 +24,22 @@
             </div>
         </div>
     </div>
+
+    <div class="promo">
+        <div class="container main__container">
+            <div class="promo-left">
+                
+                <p class="sale">Скидка</p>
+                <p class="cost">-20%</p>
+                <p class="description">При заказе на 3х и более персон мы делаем скидки, а также предоставляем скидки именинникам</p>
+            </div>
+            <div class="promo-right">
+                <p class="free">Бесплатно</p>
+                <p class="description">При заказе на сумму 500 рублей и более - доставляем бесплатно</p>
+                <a class="order" href="#">заказать</a>
+            </div>
+
+        </div>
+    </div>
 </body>
 </html>
